client/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: 'Roboto';
    src: url(../assets/fonts/Roboto-Regular.ttf);
}

* {
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
}

.scroll::-webkit-scrollbar{
    @apply w-1;
}
.scroll::-webkit-scrollbar-thumb{
    @apply bg-gray-500;
}

